--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,30 @@
 /* styles.css */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-body {
-    margin:0;padding:0;
+
+* {
+    font-family:Open Sans, Arial, Helvetica, sans-serif;
+
 }
+
+html, body {
+	padding: 0; 
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	overflow:hidden;
+}
+
 body {
     background-color:#7ca6ff;
-    font-family:Open Sans, Arial, Helvetica, sans-serif;
 }
+
+canvas { 
+	width: 100%; 
+	height: 100%; 
+	-webkit-transform: translateZ(0);	
+}
+
 
 p {
     margin:0;
